CKA-Certified-Kubernetes-Administrator/exercises/19-ingress-classic/api-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-app
  name: api-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-app
  strategy: {}
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - image: nginx:1.28
        name: nginx
        resources: {}
        ports:
          - name: http
            containerPort: 8080
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-app 
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
