CKA-Certified-Kubernetes-Administrator/exercises/19-ingress-classic/web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-app
  name: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  strategy: {}
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - image: nginx:1.28
        name: nginx
        resources: {}
        ports:
          - name: http
            containerPort: 80
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-app 
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
